# pluto

./: .gitignore  .golangci.yml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  build.rs
.claude/: settings.json
.github/workflows/: ci.yml
docs/examples/skills/task-extraction/: SKILL.md
docs/examples/skills/task-extraction/references/: examples.md
docs/plans/: 202601111101.architecture.md  202601111102.api-reference.md  202601111103.deployment.md  202601111200.pluto-agent-format.md
docs/specs/: 202601111100.project-charter.md
src/: build_info.rs  config.rs  main.rs  response.rs
src/handlers/: agents.rs  example_error.rs  health.rs  mod.rs  version.rs
